--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Maximilian Schwarzmüller (Academind GmbH)",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mongo": "^0.1.0",
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
