--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/blogs
+MONGODB_URI=mongodb+srv://aryanbhagatxd:Aryan%402024@blogs.ayww0sq.mongodb.net/blogs?retryWrites=true&w=majority
 PORT=4000
